# todo_test_task

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
prometheus/: prometheus.yml
src/: .env.example  alembic.ini  app.py
src/api/: dependencies.py
src/api/router/: todo.py
src/api/schema/: todo.py
src/core/: config.py
src/database/: database.py  model.py
src/database/migrations/: env.py
src/database/repos/: base_repo.py  task_repo.py
src/service/: todo_service.py
src/utils/: logging.py  unitofwork.py
tests/: conftest.py  test_main.py
